--- a/frontend/app/_css/Blog.css
+++ b/frontend/app/_css/Blog.css
@@ -4,15 +4,18 @@
 /* GALLERY */
 .gallery-container {
     background-color: #121416;
-    /*height: calc(100% - 84px);*/
-    height: 100vh;
+    min-height: calc(100vh - 84px);
+    height: calc(100vh - 84px);
     min-width: 100vw;
-    width: max-content;
+    scrollbar-width: thin;
+    scrollbar-color: #242628 #121416;
+    display: flex;
+    flex-direction: row;
 }
 
 .gallery-entity {
-    height: 100vh;
-    width: 100%;
+    height: 100%;
+    width: auto;
 }
 
 .gallery-title {
@@ -25,5 +28,6 @@
 @media(max-width: 1300px) {
     .gallery-container{
         height: calc(100% - 66px);
+        flex-direction: column;
     }
 }
