--- a/frontend/app/_css/Blog.css
+++ b/frontend/app/_css/Blog.css
@@ -4,13 +4,16 @@
 /* GALLERY */
 .gallery-container {
     background-color: #121416;
-    min-height: calc(100vh - 84px);
-    height: calc(100vh - 84px);
+    /*min-height: calc(100vh - 84px);*/
+    /*height: calc(100vh - 84px);*/
+    min-height: 100vh;
+    height: 100vh;
     min-width: 100vw;
-    scrollbar-width: thin;
+    scrollbar-width: none;
     scrollbar-color: #242628 #121416;
     display: flex;
     flex-direction: row;
+    overflow-y: auto;
 }
 
 .gallery-entity {
