--- a/frontend/app/_css/Blog.css
+++ b/frontend/app/_css/Blog.css
@@ -1,4 +1,15 @@
-.blog-container {
+.loading {
+    letter-spacing: 4px;
+    color: #fdfeff;
+    font-weight: 700;
+    font-size: 48px;
+    transition: 0.2s;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
 }
 
 /* GALLERY */
