loading page bug fix

--- a/frontend/app/_css/Events.css
+++ b/frontend/app/_css/Events.css
@@ -78,7 +78,7 @@
 
 .event-btn {
     background-color: #8b3c7e;
-    border-radius: 8px;
+    /*border-radius: 8px;*/
     font-size: 20px;
     color: #fdfeff;
     font-weight: 600;
