loading page fix and home page links

--- a/frontend/app/_css/Events.css
+++ b/frontend/app/_css/Events.css
@@ -74,6 +74,9 @@
     align-items: center;
     width: 100vw;
     height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 
 .event-btn {
