--- a/frontend/app/_css/Blog.css
+++ b/frontend/app/_css/Blog.css
@@ -10,6 +10,9 @@
     align-items: center;
     width: 100vw;
     height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 
 /* GALLERY */
