--- a/frontend/app/_css/Admin.css
+++ b/frontend/app/_css/Admin.css
@@ -1,8 +1,8 @@
 .admin-container {
     display: flex;
     position: relative;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
 }
 
 .content-container {
