--- a/frontend/app/_css/Events.css
+++ b/frontend/app/_css/Events.css
@@ -2,22 +2,31 @@
     min-height: 100vh;
     height: 100vh;
     min-width: 100vw;
-    scrollbar-width: none;
-    scrollbar-color: #242628 #121416;
     display: flex;
     flex-direction: row;
     overflow-y: auto;
+    scrollbar-width: none; /* Firefox */
+    scrollbar-color: #242628 #121416; /* Firefox */
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+}
+
+.events-container::-webkit-scrollbar { /* WebKit browsers */
+    width: 0;
+    height: 0;
+    background: transparent;
 }
 
 .event-entity {
-    /*border-radius: 16px;*/
     display: flex;
     flex-direction: column;
-    /*position: relative;*/
+    flex: 0 0 auto;
     box-shadow: rgba(0, 0, 0, 0.75) 0px 5px 15px;
-    transition: 0.3s;
     cursor: pointer;
-    aspect-ratio: 3/4;
+    aspect-ratio: 3/4 !important;
+}
+
+.event-label, .event-page-date, .event-time, .event-location, .event-btn, .event-description, .event-description-label {
+    transition: font-size 0.3s ease;
 }
 
 .event-label {
@@ -27,7 +36,7 @@
     letter-spacing: -0.2px;
 }
 
-.event-page-date {
+.event-page-date, .event-time, .event-location {
     font-size: 1.25rem;
     color: #fdfeff;
     font-weight: 500;
@@ -35,32 +44,22 @@
 }
 
 .event-time {
-    font-size: 1.25rem;
     color: rgba(253, 254, 255, 0.8);
-    font-weight: 500;
-    letter-spacing: -0.2px;
 }
 
 .event-location {
-    font-size: 1.25rem;
-    color: #fdfeff;
     font-weight: 400;
-    letter-spacing: -0.2px;
 }
 
 .event-poster {
-    height: 70%;
-    width: auto;
+    height: auto;
+    width: 100%;
     object-fit: cover;
     object-position: top center;
-    /*aspect-ratio: 1/1;*/
 }
 
 .event-info {
     z-index: 999;
-    /*backdrop-filter: blur(4px);*/
-    /*position: absolute;*/
-    /*bottom: 0;*/
     width: 100%;
     height: 30%;
 }
@@ -84,13 +83,11 @@
 
 .event-btn {
     background-color: #8b3c7e;
-    /*border-radius: 8px;*/
     font-size: 1.25rem;
     color: #fdfeff;
     font-weight: 600;
     letter-spacing: -0.2px;
     width: 50%;
-    transition: 0.2s;
     text-align: center;
 }
 
@@ -119,40 +116,13 @@
     height: auto;
 }
 
-@media(max-width: 1300px) {
+@media (max-width: 1300px) {
     .events-container {
         height: calc(100% - 66px);
         flex-direction: column;
     }
-    .event-label {
-        font-size: 1.5rem;
-        color: #fdfeff;
-        font-weight: 700;
-        letter-spacing: -0.2px;
-    }
 
-    .event-page-date {
-        font-size: 0.75rem;
-        color: #fdfeff;
-        font-weight: 500;
-        letter-spacing: -0.2px;
-    }
-
-    .event-time {
-        font-size: 0.75rem;
-        color: rgba(253, 254, 255, 0.8);
-        font-weight: 500;
-        letter-spacing: -0.2px;
-    }
-
-    .event-location {
-        font-size: 0.75rem;
-        color: #fdfeff;
-        font-weight: 400;
-        letter-spacing: -0.2px;
-    }
-
-    .event-description {
+    .event-label, .event-page-date, .event-time, .event-location, .event-description, .event-description-label, .event-btn {
         font-size: 0.75rem;
     }
 
@@ -161,17 +131,10 @@
     }
 
     .event-btn {
-        background-color: #8b3c7e;
-        /*border-radius: 8px;*/
-        font-size: 0.75rem;
-        color: #fdfeff;
-        font-weight: 600;
-        letter-spacing: -0.2px;
         width: 100%;
     }
 
     .event-info-poster {
         width: 80%;
-        height: auto;
     }
 }
