--- a/frontend/app/_css/Pay.css
+++ b/frontend/app/_css/Pay.css
@@ -81,6 +81,46 @@
     color: rgba(253, 254, 255, 0.7);
 }
 
+input[type="radio"] {
+    display: none;
+    overflow: hidden;
+}
+
+/* Create a custom radio button */
+input[type="radio"] + div::before {
+    content: "";
+    margin-right: 8px;
+    display: inline-block;
+    vertical-align: middle;
+    width: 1rem;
+    height: 1rem;
+    border-radius: 50%;
+    border: 4px solid #fdfeff; /* Default border color */
+    background-color: #fdfeff; /* Background color */
+    transition: background-color 0.2s, border-color 0.2s;
+}
+
+input[type="radio"]:checked + div::before {
+    background-color: #fdfeff; /* Checked background color */
+    border-color: #8b3c7e; /* Checked border color */
+}
+
+input[type="radio"]:checked + div {
+    color: #8b3c7e;
+}
+
+label {
+    transition: 0.2s;
+}
+
+label.selected {
+    border-color: #8b3c7e;
+}
+
+div.selected {
+    color: #8b3c7e;
+}
+
 @media (max-width: 1300px){
     .party-image{
         display:none;
